# agent-chat-gateway

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md  config.example.yaml  install.sh  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  e2e-canary.yml  e2e.yml  publish.yml
contexts/: rc-gateway-context.md  rc-room-profiles.example.md  scheduling-context.md
docker/: Dockerfile.acg  entrypoint.acg.sh
docker/docker-compose.example/: .env  .gitignore  docker-compose.yml
docs/: agent-chain.md  architecture.md  install-agent.md  migration-0.2.md  migration-0.3.md  permission-reference.md  requirements.md  scheduling.md  supported-features.md  user-guide.md
docs/design/: config-tool.md
gateway/: cli.py  config.py  config_migrate.py  config_validate.py  control.py  daemon.py  instructions.py  onboard.py  runtime_lock.py  schedule_types.py  service.py  state.py  upgrade.py
gateway/agents/: __init__.py  errors.py  response.py  session.py
gateway/configtool/: __init__.py  app.py  editor.py  env_writer.py  formatting.py  modals.py  model.py
gateway/connectors/: __init__.py
gateway/contexts/: fetch-history-context.md  mm-gateway-context.md  rc-gateway-context.md  scheduling-context.md  tool-index-context.md  voice-context.md
gateway/core/: __init__.py  adapter_utils.py  agent_chain.py  agent_turn_runner.py  attachment_workspace.py  config.py  connector.py  context_injector.py  dispatch.py  expiry_task.py  history_context.py  injected_context_builder.py  job_store.py  message_processor.py  permission.py  permission_notifier.py  permission_presenter.py  permission_state.py  prompt_builder.py  scheduler.py  session_manager.py  session_maps.py  state.py  state_store.py  thread_policy.py  tool_match.py  tz_utils.py  watcher_lifecycle.py
gateway/schema/: config.schema.json
gateway/tools/: __init__.py  tui.py  tui_permission_handler.py
tests/: helpers.py
tests/e2e/: .gitignore  conftest.py  docker-compose.yml  rc_client.py  setup.py  test_agent_sends_file.py  test_file_upload.py  test_permission.py  test_ping_pong.py  test_schedule_e2e.py  test_thread.py
(+129 files in other folders)
